# opendev

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  claude-code-vs-opendev-comparison.md  input.txt  patch_tests.patch  pyproject.toml  run_test.py  setup.py  test.rs  test_script.py  test_ts_rs.rs
crates/opendev-agents/: Cargo.toml
crates/opendev-agents/benches/: agent_bench.rs
crates/opendev-agents/src/: doom_loop.rs  doom_loop_tests.rs  lib.rs  llm_calls.rs  main_agent.rs  main_agent_tests.rs  memory_consolidation.rs  memory_consolidation_tests.rs  react_loop.rs  traits.rs  traits_tests.rs
crates/opendev-agents/src/agent_types/: coordination.rs  coordination_tests.rs  definitions.rs  definitions_tests.rs  mod.rs  roles.rs  roles_tests.rs
crates/opendev-agents/src/attachments/: mod.rs  tests.rs
crates/opendev-agents/src/llm_calls/: mod.rs  model_detection.rs  model_detection_tests.rs  tests.rs
crates/opendev-agents/src/prompts/: composer.rs  embedded.rs  embedded_tests.rs  loader.rs  loader_tests.rs  reminders.rs  reminders_tests.rs
crates/opendev-agents/src/react_loop/: config.rs  config_tests.rs  execution.rs  loop_state.rs  mod.rs  streaming_executor.rs  streaming_executor_tests.rs
crates/opendev-agents/src/response/: cleaner.rs  cleaner_tests.rs
crates/opendev-agents/src/skills/: discovery.rs  discovery_tests.rs  loader.rs  loader_tests.rs  metadata.rs  metadata_tests.rs  mod.rs  parsing.rs  parsing_tests.rs
crates/opendev-agents/src/subagents/: custom_loader.rs  manager.rs  mod.rs  runner.rs  spec.rs
crates/opendev-agents/templates/: reminders.md
crates/opendev-agents/templates/subagents/: subagent-code-explorer.md  subagent-planner.md
crates/opendev-agents/templates/system/: thinking.md
crates/opendev-agents/tests/: integration.rs
crates/opendev-cli/: Cargo.toml
crates/opendev-cli/src/: cli.rs  commands.rs  helpers.rs  main.rs  remote_runner.rs  runners.rs  runtime.rs  tui_runner.rs  web_executor.rs
crates/opendev-cli/src/commands/: channel.rs  (+1 more)
crates/opendev-config/: Cargo.toml
crates/opendev-config/src/: lib.rs  loader.rs  migration.rs  migration_tests.rs  models_dev.rs  paths.rs  paths_tests.rs  profile.rs  profile_tests.rs  watcher.rs  watcher_tests.rs
crates/opendev-config/tests/: integration.rs
crates/opendev-history/: Cargo.toml
crates/opendev-history/src/: event_store.rs  event_store_tests.rs  export.rs  export_tests.rs  fair_rwlock.rs  fair_rwlock_tests.rs  file_checkpoint.rs  file_checkpoint_tests.rs  file_locks.rs  file_locks_tests.rs  index.rs  index_tests.rs  lib.rs  listing.rs  listing_tests.rs  message_convert.rs  message_convert_tests.rs  projector.rs  projector_tests.rs  session_manager.rs  sharing.rs  sharing_tests.rs  snapshot.rs  snapshot_tests.rs  sqlite_store.rs  sqlite_store_tests.rs  topic_detector.rs  topic_detector_tests.rs
crates/opendev-history/tests/: integration.rs
crates/opendev-mcp/: Cargo.toml
crates/opendev-mcp/src/: config.rs  config_tests.rs  manager.rs  models.rs  models_tests.rs  transport.rs
crates/opendev-models/: Cargo.toml
crates/opendev-models/bindings/: ApprovalRequiredPayload.ts  AskUserRequiredPayload.ts  ErrorPayload.ts  FileChangesPayload.ts  FrontendEvent.ts  MessageChunkPayload.ts  MessageCompletePayload.ts  MessageStartPayload.ts  NestedToolCallPayload.ts  NestedToolResultPayload.ts  PlanApprovalRequiredPayload.ts  ProgressPayload.ts  SessionActivityPayload.ts  StatusUpdatePayload.ts  SubagentCompletedPayload.ts  SubagentStartedPayload.ts  ThinkingBlockPayload.ts  TodoChildPayload.ts  TodoItemPayload.ts  ToolCallPayload.ts  ToolResultPayload.ts
crates/opendev-models/src/: api.rs  api_tests.rs  datetime_compat.rs  datetime_compat_tests.rs  file_change.rs  file_change_tests.rs  frontend_event.rs  frontend_event_tests.rs  lib.rs  message.rs  message_tests.rs  operation.rs  operation_tests.rs  session.rs  session_tests.rs  user.rs  user_tests.rs  validator.rs  validator_tests.rs
crates/opendev-plugins/: Cargo.toml
crates/opendev-plugins/src/: manager.rs
crates/opendev-runtime/: Cargo.toml
crates/opendev-runtime/src/: action_summarizer.rs  action_summarizer_tests.rs  approval.rs  ask_user_channel.rs  ask_user_channel_tests.rs  constants.rs  constants_tests.rs  cost_tracker.rs  cost_tracker_tests.rs  custom_commands.rs  debug_logger.rs  debug_logger_tests.rs  error_handler.rs  error_handler_tests.rs  errors.rs  errors_tests.rs  file_watcher.rs  file_watcher_tests.rs  gitignore.rs  gitignore_tests.rs  interrupt.rs  interrupt_tests.rs  lazy_init.rs  lazy_init_tests.rs  lib.rs  permissions.rs  plan_approval.rs  plan_approval_tests.rs  plan_index.rs  plan_index_tests.rs  plan_names.rs  plan_names_tests.rs  redaction.rs  sandbox.rs  sandbox_tests.rs  secrets.rs  secrets_tests.rs  session_model.rs  session_model_tests.rs  session_status.rs  (+14 more)
crates/opendev-runtime/tests/: integration.rs
crates/opendev-sandbox/: Cargo.toml
crates/opendev-sandbox/src/: callback.rs  errors.rs  lib.rs  models.rs  parser.rs  prompts.rs  runtime.rs  sandbox.rs  session.rs
crates/opendev-tools-impl/: Cargo.toml
crates/opendev-tools-impl/src/: agents.rs  ask_user.rs  ask_user_tests.rs  bash.rs  batch.rs  browser.rs  browser_tests.rs  clear_todos.rs  clear_todos_tests.rs  complete_todo.rs  complete_todo_tests.rs  custom_tool.rs  custom_tool_tests.rs  diagnostics_helper.rs  diagnostics_helper_tests.rs  diff_preview.rs  diff_preview_tests.rs  file_edit.rs  file_edit_tests.rs  file_list.rs  file_list_tests.rs  file_read.rs  file_search.rs  file_write.rs  file_write_tests.rs  formatter.rs  formatter_tests.rs  insert_symbol.rs  insert_symbol_tests.rs  invoke_skill.rs  lib.rs  list_todos.rs  list_todos_tests.rs  lsp_query.rs  lsp_query_tests.rs  mcp_tool.rs  mcp_tool_tests.rs  memory.rs  memory_tests.rs  message.rs  (+33 more)
crates/opendev-tools-impl/tests/: integration.rs
crates/opendev-web/: Cargo.toml
crates/opendev-web/src/: protocol.rs  protocol_tests.rs  server.rs  server_tests.rs  websocket.rs
crates/opendev-web/tests/: integration.rs
(+1107 files in other folders)
