[package]
name = "opendev-agents"
description = "Agent layer with ReAct loop, prompt composition, and subagents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
opendev-models = { workspace = true }
opendev-config = { workspace = true }
opendev-http = { workspace = true }
opendev-tools-core = { workspace = true }
opendev-context = { workspace = true }
opendev-runtime = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
reqwest = { version = "0.12", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "agent_bench"
harness = false
