[package]
name = "opendev-history"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session history management: persistence, indexing, locking, and snapshots for OpenDev"

[dependencies]
opendev-models = { workspace = true }
opendev-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
fd-lock = "4"
dirs = "6"
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
