[package]
name = "opendev-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin and marketplace management for opendev"

[dependencies]
opendev-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs-next = { workspace = true }
regex = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
