[package]
name = "opendev-tools-impl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tool implementations for OpenDev: bash, file ops, git, web, memory, and more"

[dependencies]
opendev-tools-core = { workspace = true }
opendev-models = { workspace = true }
opendev-config = { workspace = true }
opendev-http = { workspace = true }
opendev-mcp = { workspace = true }
opendev-history = { workspace = true }
opendev-context = { workspace = true }
opendev-agents = { workspace = true }
opendev-runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
base64 = "0.22"
dirs = "6"
glob = "0.3"
libc = { workspace = true }
open = "5"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
proptest = "1"
